회원가입 focus out 기능, 회원가입 클릭 기능 추가

--- a/assets/CSS/sign.css
+++ b/assets/CSS/sign.css
@@ -180,7 +180,8 @@ body {
 }
 
 .email-error-message,
-.pw-error-message {
+.pw-error-message,
+.pw-confirm-error-message {
   color: var(--Linkbrary-red, #FF5B56);
   font-family: Pretendard;
   font-size: 0.875rem;
