Feat signup page JS

--- a/src/signup.css
+++ b/src/signup.css
@@ -88,6 +88,13 @@ header {
   font-size: 1.4rem;
   font-weight: 400;
 }
+#email.hidden {
+  border: 0.1rem solid var(--red);
+}
+
+.password-input.hidden {
+  border: 0.1rem solid var(--red);
+}
 
 #email,
 .password-input {
@@ -103,12 +110,32 @@ header {
   border-color: var(--primary);
 }
 
+.error-email,
+.error-password,
+.error-password-check {
+  color: var(--red);
+  font-size: 1.2rem;
+  font-weight: 300;
+}
+
 .eye-button {
   position: absolute;
-  bottom: 2.2rem;
+  bottom: 3.5rem;
   right: 1.5rem;
   width: 1.6rem;
   height: 1.6rem;
+}
+
+.eye-button-check {
+  position: absolute;
+  bottom: 3.7rem;
+  right: 1.5rem;
+  width: 1.6rem;
+  height: 1.6rem;
+}
+
+.hidden-eye-btn {
+  display: none;
 }
 
 .buttton-login {
