--- a/css/index.css
+++ b/css/index.css
@@ -1,23 +1,23 @@
 /* 텍스트 색상 설정 */
-.colored-text-1 {
+.landing-section__paragraph--gradient-purple-red {
   background-image: linear-gradient(90deg, #6d6afe, #ff9f9f);
   color: transparent;
   -webkit-background-clip: text;
 }
 
-.colored-text-2 {
+.landing-section__paragraph--gradient-red-blue {
   background-image: linear-gradient(90deg, #fe8a8a, #a4ceff);
   color: transparent;
   -webkit-background-clip: text;
 }
 
-.colored-text-3 {
+.landing-section__paragraph--gradient-yellow-blue {
   background-image: linear-gradient(90deg, #ffd88b, #6fbaff);
   color: transparent;
   -webkit-background-clip: text;
 }
 
-.colored-text-4 {
+.landing-section__paragraph--gradient-blue-white {
   background-image: linear-gradient(
     90deg,
     #6d7ccd 20%,
@@ -27,7 +27,7 @@
   -webkit-background-clip: text;
 }
 
-.colored-text-5 {
+.landing-section__paragraph--gradient-blue-red {
   background-image: linear-gradient(
     270deg,
     rgba(254, 87, 143, 0.3),
