--- a/signin.style.css
+++ b/signin.style.css
@@ -95,7 +95,7 @@ body {
   align-items: flex-start;
   gap: 12px;
 }
-.input-section.password__section {
+#password-section {
   position: relative;
 }
 .error {
@@ -117,7 +117,7 @@ body {
 i {
   position: absolute;
   left: 90%;
-  top: 45px;
+  top: 50%;
   z-index: 1;
 }
 .user-input.error-input {
