심화 제외 완성

--- a/css/signin.css
+++ b/css/signin.css
@@ -174,8 +174,9 @@ input:focus {
   position: relative;
 }
 
-.pwd-input-check {
+.pwd-input-check-wrapper {
   margin-top: 24px;
+  position: relative;
 }
 
 .pwd-input-check p {
