--- a/src/colors.css
+++ b/src/colors.css
@@ -2,7 +2,7 @@
   --primary: #6d6afe;
   --red: #ff5b56;
   --black: #111322;
-  --white: #fff;
+  --white: #ffffff;
 
   --gray100: #373740;
   --gray60: #9fa6b2;
