--- a/signup/signup.css
+++ b/signup/signup.css
@@ -53,6 +53,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 12px;
+  position: relative;
 }
 
 .div_margin {
@@ -125,6 +126,21 @@ body {
 
 .img-link img {
   display: block;
+}
+
+.error-msg-on {
+  position: absolute;
+  top: 82px;
+  color: #ff5b56;
+  font-size: 14px;
+  line-height: normal;
+}
+
+#email-error,
+#password-error,
+#password-check-error {
+  position: absolute;
+  top: 88px;
 }
 
 @media (max-width: 767px) {
