--- a/src/sign.css
+++ b/src/sign.css
@@ -90,6 +90,17 @@ header {
   line-height: 150%;
 }
 
+.email-error, .pw-error, .pw-check-error{
+  display: none;
+  color: #FF5B56;
+  font-family: Pretendard;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-top: -1.8rem;
+}
+
 .error {
   display: none;
   margin-top: -6px;
