--- a/src/sign.css
+++ b/src/sign.css
@@ -1,12 +1,20 @@
 @import "./global.css";
 
 body {
-  padding-top: 23.8rem;
   background-color: var(--background);
   display: flex;
   flex-direction: column;
   align-items: center;
   row-gap: 3rem;
+  padding: 12rem 3.2rem 0;
+
+  @media (min-width: 768px) {
+    padding: 20rem 0 0;
+  }
+
+  @media (min-width: 1200px) {
+    padding: 23.8rem 0 0;
+  }
 }
 
 header {
@@ -46,7 +54,12 @@ header {
   flex-direction: column;
   align-items: center;
   row-gap: 3.2rem;
-  width: 40rem;
+  width: 100%;
+  max-width: 40rem;
+
+  @media (min-width: 768px) {
+    width: 40rem;
+  }
 }
 
 .sign-form {
@@ -89,9 +102,29 @@ header {
   border-color: var(--primary);
 }
 
+.sign-input.sign-input-error {
+  border-color: var(--red);
+}
+
+.sign-input.sign-input-error:focus {
+  border-color: var(--red);
+}
+
+.error-message {
+  display: none;
+  margin-top: -0.4rem;
+  font-size: 1.4rem;
+  font-weight: 400;
+  color: var(--red);
+}
+
+.error-message.error-message-on {
+  display: inline-block;
+}
+
 .eye-button {
   position: absolute;
-  bottom: 2.2rem;
+  top: 5.1rem;
   right: 1.5rem;
   width: 1.6rem;
   height: 1.6rem;
@@ -149,18 +182,4 @@ header {
 .kakao-link {
   padding-top: 0.2rem;
   background-color: #f5e14b;
-}
-
-
-@media (max-width: 767px) {
-  
-.sign-box {
-  width: 325px;
-
-
-}
-
-
-
-
 }
