--- a/Linkbrary/src/assets/scss/components/_feature-description.scss
+++ b/Linkbrary/src/assets/scss/components/_feature-description.scss
@@ -52,17 +52,17 @@
     }
 
     .folder-manage-image {
-      background-image: url('/src/assets/img/feature_bg1.png');
+      background-image: url('../../img/feature_bg1.png');
       background-size: cover;
     }
 
     .folder-share-image {
-      background-image: url('/src/assets/img/feature_bg2.png');
+      background-image: url('../../img/feature_bg2.png');
       background-size: cover;
     }
 
     .folder-search-image {
-      background-image: url('/src/assets/img/feature_bg3.png');
+      background-image: url('../../img/feature_bg3.png');
       background-size: cover;
     }
 
