--- a/Linkbrary/src/assets/scss/pages/_home.scss
+++ b/Linkbrary/src/assets/scss/pages/_home.scss
@@ -146,7 +146,7 @@
 
   .search-input {
     width: 100%;
-    background-image: url('/src/assets/img/Search.svg');
+    background-image: url('../../img/Search.svg');
     background-repeat: no-repeat;
     background-position: left center;
     font-size: 1em;
