--- a/Linkbrary/src/assets/scss/just-for-fun/blackJack.scss
+++ b/Linkbrary/src/assets/scss/just-for-fun/blackJack.scss
@@ -1,4 +1,5 @@
-@use "../abstracts" as a;
+@use '../abstracts' as a;
+@use '../components/buttons';
 body {
   width: 100%;
   height: 100%;
@@ -20,6 +21,10 @@ button {
     padding: 2px;
     font-size: 15px;
   }
+}
+
+.main-header {
+  position: relative;
 }
 
 .card {
