Part1 장성훈 week5 (#194)
* 2주차 수정

* 3주차 시작

* 4주차 시작

* 이메일, 패스워드 에러메세지 기능

* focusout 이벤트 핸들러 수정

* 폴더 구조변경

* valid 파일 구조 변경

* (index.js)let 변수를 const로 변경

* 로그인, 회원가입 HTML, CSS 클래스네임 수정

* 회원가입, 로그인 눈 position 수정

* index.html classname 수정

* 이메일, 패스워드 선택 수정(class -> type)

* 에러 메세지 출력함수 수정

* (signin.js) dom과 로직 분리

* signup 버튼 클래스네임 변경

* (signup.js)이메일 validate 클래스

* (signup.css , js) 에러메세지 스타일수정, 패스워드 유효성검사

* 비밀번호 확인 수정

--- a/signup/signup.css
+++ b/signup/signup.css
@@ -49,7 +49,9 @@ header {
   border-bottom: 0.1rem solid var(--primary);
 }
 
-.sign-box {
+
+.sign-container {
+
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -69,29 +71,34 @@ header {
   width: 100%;
 }
 
-.sign-inputs {
+
+.sign-form__body {
+
   display: flex;
   flex-direction: column;
   row-gap: 2.4rem;
 }
 
-.sign-input-box {
+.form-group {
+
   display: flex;
   flex-direction: column;
   row-gap: 1.2rem;
 }
 
-.sign-password {
+
+.password-container {
   position: relative;
 }
 
-.sign-input-label {
+.form-group__label {
   font-size: 1.4rem;
   font-weight: 400;
 }
 
-.sign-input-email,
-.sign-input-password {
+.form-group__email,
+.form-group__password,
+.form-group__password-confirm {
   padding: 1.8rem 1.5rem;
   border-radius: 0.8rem;
   border: 0.1rem solid var(--gray20);
@@ -99,12 +106,20 @@ header {
   line-height: 150%;
 }
 
-.sign-input-email:focus,
-.sign-input-password:focus {
+.form-group__email:focus,
+.form-group__password:focus,
+.form-group__password-confirm:focus {
   border-color: var(--primary);
 }
 
-.eye-button {
+.form-group__error-message--email,
+.form-group__error-message--password,
+.form-group__error-message--password-confirm {
+  color: var(--red);
+  font-size: 1.3rem;
+}
+
+.form-group__eye-button {
   position: absolute;
   bottom: 2.2rem;
   right: 1.5rem;
@@ -112,7 +127,12 @@ header {
   height: 1.6rem;
 }
 
-.cta {
+
+.form-group__eye-button > img {
+  position: relative;
+}
+
+.form-group__signup-button {
   display: flex;
   justify-content: center;
   align-items: center;
