--- a/mission/src/sign.css
+++ b/mission/src/sign.css
@@ -103,11 +103,11 @@ header {
   width: 1.6rem;
   height: 1.6rem;
   top: 2.3rem;
-  background-image: url('../images/eye-on.svg');
+  background-image: url("../images/eye-on.svg");
 }
 
 .eye-button-off {
-  background-image: url('../images/eye-off.svg');
+  background-image: url("../images/eye-off.svg");
 }
 
 .sign-button {
@@ -169,14 +169,13 @@ header {
   font-size: 14px;
 }
 
-.eye-button-container {
+.paswword-input-container {
   width: 100%;
   position: relative;
-
 }
 /*모바일 환경*/
 
-@media (min-width: 375px) and (max-width: 767px) { 
+@media (min-width: 375px) and (max-width: 767px) {
   .sign-box {
     width: 100%;
     max-width: 40rem;
@@ -197,7 +196,7 @@ header {
     display: flex;
     flex-direction: column;
     row-gap: 1.2rem;
-}
+  }
   .cta {
     max-width: 40rem;
   }
