--- a/styles/ui.css
+++ b/styles/ui.css
@@ -3,35 +3,43 @@
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
-  background-image: linear-gradient(91.26deg, var(--primary) 17.28%, #FF9F9F 74.98%);
+  background-image: linear-gradient(
+    91.26deg,
+    var(--primary) 17.28%,
+    #ff9f9f 74.98%
+  );
 }
 
 #section_text-color-pink-to-blue {
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
-  background-image: linear-gradient(95.63deg, #FE8A8A 1.72%, #A4CEFF 74.97%);
+  background-image: linear-gradient(95.63deg, #fe8a8a 1.72%, #a4ceff 74.97%);
 }
 
 #section_text-color-yellow-to-blue {
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
-  background-image: linear-gradient(277.01deg, #6FBAFF 59.22%, #FFD88B 93.66%);
+  background-image: linear-gradient(277.01deg, #6fbaff 59.22%, #ffd88b 93.66%);
 }
 
 #section_text-color-purple-to-blue {
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
-  background-image: linear-gradient(99.5deg, #6D7CCD 19.76%, rgba(82, 136, 133, 0.22) 52.69%);  
+  background-image: linear-gradient(
+    99.5deg,
+    #6d7ccd 19.76%,
+    rgba(82, 136, 133, 0.22) 52.69%
+  );
 }
 
 #section_text-color-blue-to-purple {
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
-  background-image: linear-gradient(271.36deg, #FE578F -9.84%, #68E8F9 107.18%);
+  background-image: linear-gradient(271.36deg, #fe578f -9.84%, #68e8f9 107.18%);
 }
 
 /*signpage styling*/
@@ -58,17 +66,12 @@ input:focus {
   border: none;
 }
 
-.wrongsign {
-  border: none;
-  outline: 1px solid red;
-}
-
 .error-message-email,
 .error-message-password,
 .error-message-password-confirm {
   display: block;
   font-weight: 400;
   font-size: 14px;
-  color: #FF5B56;
+  color: #ff5b56;
   line-height: 16.71px;
 }
