--- a/css/pages/auth.css
+++ b/css/pages/auth.css
@@ -1,11 +1,11 @@
 @import "../globals.css";
 
-body{
-  background: var(--Linkbrary-bg, #F0F6FF);
+body {
+  background: var(--Linkbrary-bg, #f0f6ff);
   margin: 0;
 }
 
-.auth-layout{
+.auth-layout {
   padding: 14.875rem 0rem 7.3125rem 0rem;
   display: flex;
   flex-direction: column;
@@ -13,24 +13,24 @@ body{
   gap: 2rem;
 }
 
-.auth__gap{
+.auth__gap {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 1.875rem;
 }
 
-.auth-header{
+.auth-header {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 1rem;
 }
 
-.auth-header__massage{
+.auth-header__massage {
   display: flex;
   align-items: center;
-  gap: .5rem;
+  gap: 0.5rem;
   color: var(--black, #000);
   font-family: Pretendard;
   font-size: 1rem;
@@ -39,8 +39,8 @@ body{
   line-height: 1.5rem; /* 150% */
 }
 
-.auth-header__btn{
-  color: var(--Linkbrary-primary-color, #6D6AFE);
+.auth-header__btn {
+  color: var(--Linkbrary-primary-color, #6d6afe);
   font-family: Pretendard;
   font-size: 1rem;
   font-style: normal;
@@ -48,100 +48,113 @@ body{
   line-height: normal;
 }
 
-.auth-form{
+.auth-form {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 1.875rem;
 }
 
-.auth-form__group{
+.auth-form__group {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   gap: 1.5rem;
 }
 
-.auth-form__input-group{
+.auth-form__input-group {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: .75rem;
+  gap: 0.75rem;
 }
 
-.auth-form__input-group label{
+.auth-form__input-group label {
   color: var(--black, #000);
   font-family: Pretendard;
-  font-size: .875rem;
+  font-size: 0.875rem;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
 }
 
-.auth-form__input-group input{
+.auth-form__input-group input {
   display: flex;
   width: 25rem;
-  padding: 1.125rem .9375rem;
+  padding: 1.125rem 0.9375rem;
   justify-content: center;
   align-items: center;
-  border-radius: .5rem;
-  border: 1px solid var(--Linkbrary-gray20, #CCD5E3);
-  background: var(--Linkbrary-white, #FFF);
+  border-radius: 0.5rem;
+  border: 1px solid var(--Linkbrary-gray20, #ccd5e3);
+  background: var(--Linkbrary-white, #fff);
 }
 
-.auth-form__input-group input:hover{
-  border-radius: .5rem;
-  border: 1px solid var(--Linkbrary-primary-color, #6D6AFE);
-  background: var(--Linkbrary-white, #FFF);
+.auth-form__input-group input:hover {
+  border-radius: 0.5rem;
+  border: 1px solid var(--Linkbrary-primary-color, #6d6afe);
+  background: var(--Linkbrary-white, #fff);
 }
 
-.auth-form__password-input{
+.auth-form__password-input {
   position: relative;
 }
 
-.auth-form__password-toggle-btn{
+.auth-form__password-toggle-btn {
+  background-image: url("../../icons/eye-off.svg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 1rem;
+  height: 1rem;
   border: none;
-  background: none;
   padding: 0;
-}
-
-.auth-form__password-icon{
   position: absolute;
   top: 1.125rem;
-  right: .9375rem;
+  right: 0.9375rem;
   bottom: 1.125rem;
 }
-.auth-form__input-group .auth-form__input--invalid{
-  border: 1px solid var(--Linkbrary-red, #FF5B56);
+
+.eye-on {
+  background-image: url("../../icons/eye-on.svg");
+}
+/* 
+.auth-form__password-icon {
+  background-image: url("/icons/eye-off.svg");
+} */
+
+.auth-form__input-group .auth-form__input--invalid {
+  border: 1px solid var(--Linkbrary-red, #ff5b56);
 }
 
-.auth-form__input-group .auth-form__input--invalid:hover{
-  border: .125rem solid var(--Linkbrary-red, #FF5B56);
+.auth-form__input-group .auth-form__input--invalid:hover {
+  border: 0.125rem solid var(--Linkbrary-red, #ff5b56);
 }
 
 #auth-form__email-error,
 #auth-form__password-error,
-#auth-form__password-confirm-error{
-  color: var(--Linkbrary-red, #FF5B56);
+#auth-form__password-confirm-error {
+  color: var(--Linkbrary-red, #ff5b56);
   font-family: Pretendard;
-  font-size: .875rem;
+  font-size: 0.875rem;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  }
+}
 
-  #auth-form__signin-btn,
-  #auth-form__signup-btn{
+#auth-form__signin-btn,
+#auth-form__signup-btn {
   display: flex;
   width: 25rem;
   padding: 1rem 1.25rem;
   justify-content: center;
   align-items: center;
   gap: 1.875rem;
-  border-radius: .5rem;
-  background: var(--gra-purpleblue-to-skyblue, linear-gradient(91deg, #6D6AFE 0.12%, #6AE3FE 101.84%));
+  border-radius: 0.5rem;
+  background: var(
+    --gra-purpleblue-to-skyblue,
+    linear-gradient(91deg, #6d6afe 0.12%, #6ae3fe 101.84%)
+  );
   border-style: none;
-  color: var(--Grey-Light, #F5F5F5);
+  color: var(--Grey-Light, #f5f5f5);
   font-family: Pretendard;
   font-size: 1.125rem;
   font-style: normal;
@@ -149,34 +162,34 @@ body{
   line-height: normal;
 }
 
-.social-auth{
+.social-auth {
   display: flex;
   width: 25rem;
-  padding: .75rem 1.5rem;
+  padding: 0.75rem 1.5rem;
   justify-content: space-between;
   align-items: center;
   border-radius: 8px;
-  border: .0625rem solid var(--Linkbrary-gray20, #CCD5E3);
-  background: var(--Linkbrary-gray10, #E7EFFB);
+  border: 0.0625rem solid var(--Linkbrary-gray20, #ccd5e3);
+  background: var(--Linkbrary-gray10, #e7effb);
 }
 
-.social-auth__icons{
+.social-auth__icons {
   display: flex;
   align-items: flex-start;
   gap: 1rem;
 }
 
-.social-auth__icon{
+.social-auth__icon {
   position: relative;
 }
 
-.social-auth__background{
+.social-auth__background {
   width: 2.625rem;
   height: 2.625rem;
   flex-shrink: 0;
 }
 
-.gooole-icon{
+.gooole-icon {
   display: flex;
   width: 1.375rem;
   height: 1.375rem;
@@ -184,47 +197,47 @@ body{
   align-items: center;
   flex-shrink: 0;
   position: absolute;
-  inset: .625rem;
+  inset: 0.625rem;
 }
 
-.kakao-icon{
+.kakao-icon {
   width: 1.625rem;
   height: 1.5rem;
   flex-shrink: 0;
   position: absolute;
-  inset: .625rem .5rem .5rem .5rem;
+  inset: 0.625rem 0.5rem 0.5rem 0.5rem;
 }
 
 /* 모바일 사이즈 */
 
-@media (max-width : 47.9375rem) {
-main{
-  padding: 7.5rem 2rem 0;
-}
+@media (max-width: 47.9375rem) {
+  main {
+    padding: 7.5rem 2rem 0;
+  }
 
-.auth-layout{
-  display: flex;
-  padding: 0;
-  width: auto;
-  max-width: 25rem;
-  margin: 0 auto;
-  justify-content: center;
-  align-items: center;
-  gap: 2rem;
-}
+  .auth-layout {
+    display: flex;
+    padding: 0;
+    width: auto;
+    max-width: 25rem;
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+  }
 
-.auth__gap,
-.auth-form__group,
-.auth-form__input-group,
-.auth-form__input-group input,
-.auth-form__submit-btn,
-.social-auth{
-  width: 100%;
-  max-width: 25rem;
-  align-items: stretch;
-}
+  .auth__gap,
+  .auth-form__group,
+  .auth-form__input-group,
+  .auth-form__input-group input,
+  .auth-form__submit-btn,
+  .social-auth {
+    width: 100%;
+    max-width: 25rem;
+    align-items: stretch;
+  }
 
-.social-auth{
-  align-items: center;
-}
+  .social-auth {
+    align-items: center;
+  }
 }
