새로운 파일 apply.js추가 및 함수 분리 후 사용으로 코드 간소화

--- a/css/sign.css
+++ b/css/sign.css
@@ -103,7 +103,8 @@ input {
   position: relative;
 }
 
-.password-button {
+.password-button,
+.password-check-button {
   display: flex;
   justify-content: center;
   align-items: center;
