--- a/3Week/src/reset.css
+++ b/3Week/src/reset.css
@@ -3,7 +3,8 @@
 * {
   box-sizing: border-box;
   margin: 0;
-  font-family: 'Pretendard';
+  font-family: "Pretendard";
+  word-break: keep-all;
 }
 
 html,
