--- a/3Week/src/sign.css
+++ b/3Week/src/sign.css
@@ -1,12 +1,20 @@
-@import './global.css';
+@import "./global.css";
 
 body {
-  padding-top: 23.8rem;
   background-color: var(--background);
   display: flex;
   flex-direction: column;
   align-items: center;
   row-gap: 3rem;
+  padding: 12rem 3.2rem 0;
+
+  @media (min-width: 768px) {
+    padding: 20rem 0 0;
+  }
+
+  @media (min-width: 1200px) {
+    padding: 23.8rem 0 0;
+  }
 }
 
 header {
@@ -41,16 +49,17 @@ header {
   border-bottom: 0.1rem solid var(--primary);
 }
 
-.hide {
-  display: none;
-}
-
 .sign-box {
   display: flex;
   flex-direction: column;
   align-items: center;
   row-gap: 3.2rem;
-  width: 40rem;
+  width: 100%;
+  max-width: 40rem;
+
+  @media (min-width: 768px) {
+    width: 40rem;
+  }
 }
 
 .sign-form {
@@ -81,8 +90,7 @@ header {
   font-weight: 400;
 }
 
-.sign-input,
-.sign-input-password {
+.sign-input {
   padding: 1.8rem 1.5rem;
   border-radius: 0.8rem;
   border: 0.1rem solid var(--gray20);
@@ -90,14 +98,33 @@ header {
   line-height: 150%;
 }
 
-.sign-input:focus,
-.sign-input-password:focus {
+.sign-input:focus {
   border-color: var(--primary);
+}
+
+.sign-input.sign-input-error {
+  border-color: var(--red);
+}
+
+.sign-input.sign-input-error:focus {
+  border-color: var(--red);
+}
+
+.error-message {
+  display: none;
+  margin-top: -0.4rem;
+  font-size: 1.4rem;
+  font-weight: 400;
+  color: var(--red);
+}
+
+.error-message.error-message-on {
+  display: inline-block;
 }
 
 .eye-button {
   position: absolute;
-  bottom: 2.2rem;
+  top: 5.1rem;
   right: 1.5rem;
   width: 1.6rem;
   height: 1.6rem;
@@ -155,33 +182,4 @@ header {
 .kakao-link {
   padding-top: 0.2rem;
   background-color: #f5e14b;
-}
-
-@media (max-width: 767px) {
-  .sign-box,
-  .sign-input-box,
-  .cta,
-  .sns-box,
-  .sns-links {
-    max-width: 400px;
-  }
-
-  body {
-    padding: auto 32px;
-  }
-}
-
-.failure-message,
-.failure-message2,
-.failure-message3,
-.failure-password-message,
-.failure-password-message2 {
-  text-align: left;
-  font-weight: 400;
-  font-size: 14px;
-  color: rgb(255, 91, 86);
-}
-
-.error-border {
-  border: 0.1rem solid rgb(255, 91, 86);
 }
