--- a/week2/static/css/auth.css
+++ b/week2/static/css/auth.css
@@ -75,23 +75,15 @@ header p a {
     font-size: 1.4rem;
 }
 
-.eye {
+.password-icon-btn {
     position: absolute;
     top: 4.8rem;
     right: 1.5rem;
     cursor: pointer;
     width: 1.6rem;
     height: 1.6rem;
-}
-
-#passwordHidden {
-    position: absolute;
-    top: 4.8rem;
-    right: 1.5rem;
-    cursor: pointer;
-    width: 1.6rem;
-    height: 1.6rem;
-    opacity: 0;
+    border: none;
+    background: none;
 }
 
 footer {
