--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,7 +8,7 @@
     --gray-color: #ccd5e3;
     --gray-color-lighter: #e7effb;
     --gray-color-lightest: #f0f6ff;
-    --Grey-Light: #F5F5F5;
+    --Grey-Light: #f5f5f5;
 }
 
 * {
@@ -16,11 +16,12 @@
 }
 
 body {
-    margin : 0;
+    margin: 0;
 }
 
-p, h1 {
-    margin : 0;
+p,
+h1 {
+    margin: 0;
 }
 
 header {
@@ -30,9 +31,9 @@ header {
     align-items: center;
     gap: 8px;
     align-self: stretch;
-    background-color: #F0F6FF;
+    background-color: #f0f6ff;
     position: sticky;
-    top : 0;
+    top: 0;
 }
 
 .headerContainor {
@@ -55,8 +56,11 @@ header {
     align-items: center;
     gap: 10px;
     border-radius: 8px;
-    background: var(--gra-purpleblue-to-skyblue, linear-gradient(91deg, #6D6AFE 0.12%, #6AE3FE 101.84%));
-    color: var(--Grey-Light, #F5F5F5);
+    background: var(
+        --gra-purpleblue-to-skyblue,
+        linear-gradient(91deg, #6d6afe 0.12%, #6ae3fe 101.84%)
+    );
+    color: var(--Grey-Light, #f5f5f5);
     font-family: Pretendard;
     font-size: 18px;
     font-style: normal;
@@ -73,7 +77,7 @@ header {
     justify-content: flex-end;
     align-items: center;
     gap: 40px;
-    background-color: #F0F6FF;
+    background-color: #f0f6ff;
 }
 
 .explain {
@@ -86,7 +90,7 @@ header {
 }
 
 .explain .highlight {
-    background: linear-gradient(91deg, #6D6AFE 17.28%, #FF9F9F 74.98%);
+    background: linear-gradient(91deg, #6d6afe 17.28%, #ff9f9f 74.98%);
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -100,8 +104,11 @@ header {
     align-items: center;
     gap: 10px;
     border-radius: 8px;
-    background: var(--gra-purpleblue-to-skyblue, linear-gradient(91deg, #6D6AFE 0.12%, #6AE3FE 101.84%));
-    color: var(--Grey-Light, #F5F5F5);
+    background: var(
+        --gra-purpleblue-to-skyblue,
+        linear-gradient(91deg, #6d6afe 0.12%, #6ae3fe 101.84%)
+    );
+    color: var(--Grey-Light, #f5f5f5);
     font-family: Pretendard;
     font-size: 18px;
     font-style: normal;
@@ -113,7 +120,7 @@ header {
 .img1 {
     width: 1200px;
     height: 590px;
-    padding : 50px 41px;
+    padding: 50px 41px;
     overflow: hidden;
 }
 
@@ -123,7 +130,11 @@ header {
     flex-shrink: 0;
     border-radius: 25px;
     box-shadow: 0px 4px 25px 0px rgba(0, 0, 0, 0.08);
-    background: linear-gradient(180deg, rgba(196, 196, 196, 0.00) 67.68%, #F0F6FF 94.76%); 
+    background: linear-gradient(
+        180deg,
+        rgba(196, 196, 196, 0) 67.68%,
+        #f0f6ff 94.76%
+    );
 }
 
 .content2 {
@@ -139,8 +150,8 @@ header {
     gap: 157px;
 }
 
-.img2{
-    width : 550px;
+.img2 {
+    width: 550px;
     height: 450px;
 }
 
@@ -155,7 +166,7 @@ header {
 }
 
 .content2Title .highlight2 {
-    background: linear-gradient(96deg, #FE8A8A 1.72%, #A4CEFF 74.97%);
+    background: linear-gradient(96deg, #fe8a8a 1.72%, #a4ceff 74.97%);
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -167,7 +178,7 @@ header {
 }
 
 .contentParagraph {
-    color: #6B6B6B;
+    color: #6b6b6b;
     font-family: Abel;
     font-size: 16px;
     font-style: normal;
@@ -204,7 +215,7 @@ header {
 }
 
 .content3Title .highlight3 {
-    background: linear-gradient(277deg, #6FBAFF 59.22%, #FFD88B 93.66%);
+    background: linear-gradient(277deg, #6fbaff 59.22%, #ffd88b 93.66%);
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -240,7 +251,11 @@ header {
 }
 
 .content4Title .highlight4 {
-    background: linear-gradient(99deg, #6D7CCD 19.76%, rgba(82, 136, 133, 0.22) 52.69%);
+    background: linear-gradient(
+        99deg,
+        #6d7ccd 19.76%,
+        rgba(82, 136, 133, 0.22) 52.69%
+    );
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -276,7 +291,7 @@ header {
 
 .content5Title {
     color: #000;
-font-family: Pretendard;
+    font-family: Pretendard;
     font-size: 48px;
     font-style: normal;
     font-weight: 700;
@@ -284,12 +299,18 @@ font-family: Pretendard;
     letter-spacing: -0.3px;
 }
 
-.content2Title, .content3Title, .content4Title, .content5Title {
+.content2Title,
+.content3Title,
+.content4Title,
+.content5Title {
     white-space: nowrap;
 }
 
 .highlight5 {
-    background: var(--Fandom-K-gra-blue-to-pink, linear-gradient(271deg, #FE578F -9.84%, #68E8F9 107.18%));
+    background: var(
+        --Fandom-K-gra-blue-to-pink,
+        linear-gradient(271deg, #fe578f -9.84%, #68e8f9 107.18%)
+    );
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -346,7 +367,7 @@ footer {
 }
 
 .footerMenu a {
-    color: #CFCFCF;
+    color: #cfcfcf;
     font-family: Acme;
     font-size: 16px;
     font-style: normal;
@@ -368,7 +389,7 @@ footer {
 }
 
 /* tablet */
-@media (max-width : 1200px) {
+@media (max-width: 1200px) {
     br {
         display: none;
     }
@@ -377,11 +398,11 @@ footer {
         width: 100%;
     }
     .content1 {
-        padding-left : 251px;
-        padding-right : 250px;
+        padding-left: 251px;
+        padding-right: 250px;
     }
-    .explain{
-        padding-left : 113px;
+    .explain {
+        padding-left: 113px;
         padding-right: 113px;
     }
     .img1 {
@@ -389,37 +410,50 @@ footer {
         height: 343px;
         overflow: hidden;
     }
-    
+
     .img1 img {
         width: 650px;
         height: 383px;
         flex-shrink: 0;
         border-radius: 25px;
         box-shadow: 0px 4px 25px 0px rgba(0, 0, 0, 0.08);
-        background: linear-gradient(180deg, rgba(196, 196, 196, 0.00) 67.68%, #F0F6FF 94.76%); 
+        background: linear-gradient(
+            180deg,
+            rgba(196, 196, 196, 0) 67.68%,
+            #f0f6ff 94.76%
+        );
     }
 
-    .content2, .content3, .content4, .content5 {
-        padding-left : 0;
-        padding-right: 0;;
+    .content2,
+    .content3,
+    .content4,
+    .content5 {
+        padding-left: 0;
+        padding-right: 0;
     }
 
-    .containor2, .containor3, .containor4, .containor5 {
-        gap : 51px;
+    .containor2,
+    .containor3,
+    .containor4,
+    .containor5 {
+        gap: 51px;
     }
 
-    .img2, .img3, .img4, .img5 {
-        width : 385px;
+    .img2,
+    .img3,
+    .img4,
+    .img5 {
+        width: 385px;
         height: 315px;
     }
 
     .textbox {
-        width : 262px;
+        width: 262px;
     }
 }
 
 /* moblie */
-@media (max-width : 768px) {
+@media (max-width: 768px) {
     br {
         display: none;
     }
@@ -430,17 +464,17 @@ footer {
     .content3,
     .content4,
     .content5,
-    .footerContainor{
-        padding-left : 32px;
+    .footerContainor {
+        padding-left: 32px;
         padding-right: 32px;
     }
 
     .content1 {
-        padding-top : 28px;
+        padding-top: 28px;
     }
 
     .explain {
-        padding-left : 44.5px;
+        padding-left: 44.5px;
         padding-right: 44.5px;
     }
 
@@ -452,15 +486,21 @@ footer {
         width: 100%;
     }
 
-    .content2, .content3, .content4, .content5 {
+    .content2,
+    .content3,
+    .content4,
+    .content5 {
         padding-top: 40px;
         padding-bottom: 40px;
     }
 
-    .containor2, .containor3, .containor4, .containor5 {
+    .containor2,
+    .containor3,
+    .containor4,
+    .containor5 {
         gap: 20px;
         flex-direction: column;
-        width : 100%;
+        width: 100%;
     }
     .textbox {
         width: 100%;
@@ -474,7 +514,10 @@ footer {
         display: contents;
     }
 
-    .img2, .img3, .img4, .img5 {
+    .img2,
+    .img3,
+    .img4,
+    .img5 {
         width: 100%;
         height: 100%;
         order: 2;
@@ -485,22 +528,22 @@ footer {
     }
 
     footer {
-        padding-top : 40px;
+        padding-top: 40px;
         height: 0;
     }
 
     .footerContent {
         display: grid;
         grid-template: 1fr / 1fr 1fr;
-        gap : 60px;
-      }
-      
-      .codeit {
+        gap: 60px;
+    }
+
+    .codeit {
         text-align: left;
         grid-area: 2/ 1;
-      }
+    }
 
-      .footerIcon {
+    .footerIcon {
         justify-content: flex-end;
-      }
+    }
 }
