6주차 위클리 미션 적용

--- a/src/sign.css
+++ b/src/sign.css
@@ -46,7 +46,7 @@ header {
   font-weight: 600;
   line-height: normal;
   color: var(--primary);
-  text-decoration: 0.1rem solid var(--primary);
+  border-bottom: 0.1rem solid var(--primary);
 }
 
 .sign-box {
