--- a/src/colors.css
+++ b/src/colors.css
@@ -1,20 +1,13 @@
 :root {
-  --primary: #6d6afe;
-  --red: #ff5b56;
-  --black: #111322;
-  --white: #ffffff;
-  --off-white: #f5f5f5;
-  --grey-5: #3e3e43;
-  --grey-4: #9FA6B2; 
-  --grey-3: #CCD5E3;
-  --grey-2: #E7EFFB;
-  --grey-1: #F0F6FF;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
+  --color-primary: #6d6afe;
+  --color-red: #ff5b56;
+  --color-sky: #6AE3FE;
+  --color-black: #111322;
+  --color-white: #ffffff;
+  --color-white-off: #f5f5f5;
+  --color-grey5: #3e3e43;
+  --color-grey4: #9FA6B2; 
+  --color-grey3: #CCD5E3;
+  --color-grey2: #E7EFFB;
+  --color-grey1: #F0F6FF;
 }
