fix: unitized class names to kebab-case

--- a/mission/src/sign.css
+++ b/mission/src/sign.css
@@ -90,9 +90,9 @@ header {
   border-color: var(--primary);
 }
 
-.pwdErrorLine,
-.emailErrorLine,
-.pwdCheckErrorLine {
+.pwd-error-line,
+.email-error-line,
+.pwd-check-error-line {
   border-color: var(--red);
 }
 
