jay-wkjun : 로그인, 회원가입 페이지 리팩토링

--- a/src/reset.css
+++ b/src/reset.css
@@ -19,3 +19,14 @@ a {
   text-decoration: none;
   cursor: pointer;
 }
+
+input:focus {
+  outline: none;
+}
+
+button {
+  border: none; 
+  padding: unset;
+  background-color: unset;
+  cursor: pointer;
+}
