로그인 페이지 이벤트 모듈 수정

--- a/src/sign.css
+++ b/src/sign.css
@@ -128,7 +128,7 @@ flex, row-gap 을 이용해 서로 다른 요소 간 간격을 조정한다.
   margin-top: -0.4rem;
   font-size: 1.4rem;
   font-weight: 400;
-  color: var(--red);
+  color: var(--color-red);
 }
 
 .error-message.error-message-on { /* event */
