--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -13,9 +13,7 @@
     justify-content: space-between;
     align-items: center;
     max-width: 1920px;
-    width: 100%;
-    padding: 32px 104px 64px;
-
+    width: inherit;
     .copyright {
       color: #676767;
       font-family: Abel;
@@ -43,17 +41,18 @@
         color: inherit;
       }
     }
+  }
+  @media (max-width: 767px) {
+    padding: 32px;
 
-    @media (max-width: 767px) {
+    .footer-bar {
       display: grid;
       grid-template-columns: 181px 116px;
       column-gap: auto;
       row-gap: 60px;
-      padding: 32px;
-
-      .copyright {
-        order: 1;
-      }
+    }
+    .copyright {
+      order: 1;
     }
   }
 }
