--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -13,7 +13,7 @@
     justify-content: space-between;
     align-items: center;
     max-width: 1920px;
-    width: inherit;
+    width: 100%;
     .copyright {
       color: #676767;
       font-family: Abel;
