--- a/src/components/FolderInfo/FolderInfo.css
+++ b/src/components/FolderInfo/FolderInfo.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 20px 624px 60px;
+  margin: 20px auto 60px;
   gap: 20px;
   width: fit-content;
 
