--- a/src/components/utils/Button.css
+++ b/src/components/utils/Button.css
@@ -13,3 +13,10 @@
   font-weight: 600;
   font-size: 1.125rem;
 }
+
+@media (max-width: 767px) {
+  .btn {
+    padding: 10px 0;
+    font-size: 0.875rem;
+  }
+}
