--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,7 +8,7 @@
   align-items: center;
   background-color: inherit;
   z-index: 2;
-  margin: 32px 200px;
+  padding: 32px 200px;
 
   .blind {
     position: absolute;
