style: Apply background color, padding, width, justify-content in LinkCardList component

--- a/src/components/LinkCardList/LinkCardList.css
+++ b/src/components/LinkCardList/LinkCardList.css
@@ -1,5 +1,9 @@
 .link-card-list {
   display: grid;
   gap: 20px;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: auto auto auto;
+  background-color: #fff;
+  width: 100%;
+  padding: 40px 0 100px;
+  justify-content: center;
 }
