--- a/src/components/LinkCardList/LinkCardList.css
+++ b/src/components/LinkCardList/LinkCardList.css
@@ -9,8 +9,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 40px;
   background-color: #fff;
   width: 100%;
   padding: 40px 0 100px;
+}
+
+.content-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
 }
