--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,9 @@
-body {
-}
-
+@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
 #root {
   background-color: #e7effb;
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
+  font-family: 'Pretendard', sans-serif;
 }
