--- a/src/components/Account/Account.css
+++ b/src/components/Account/Account.css
@@ -6,8 +6,16 @@
 .user-profile-img {
   width: 28px;
   aspect-ratio: 1/1;
+  border-radius: 50%;
 }
 
 .user-email {
   font-size: 14px;
+  @media (max-width: 767px) {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+  }
 }
