--- a/src/components/FolderInfo/FolderInfo.css
+++ b/src/components/FolderInfo/FolderInfo.css
@@ -13,6 +13,7 @@
     gap: 12px;
 
     .owner-profile-image {
+      border-radius: 50%;
       width: 44px;
       height: 44px;
     }
@@ -21,5 +22,9 @@
   .folder-name {
     font-size: 2.5em;
     font-weight: 600;
+  }
+
+  @media (max-width: 1124px) {
+    margin: 10px auto 40px;
   }
 }
