--- a/src/components/LinkCardList/LinkCardList.css
+++ b/src/components/LinkCardList/LinkCardList.css
@@ -3,6 +3,13 @@
   gap: 20px;
   grid-template-columns: auto auto auto;
   justify-content: center;
+
+  @media (max-width: 1124px) {
+    grid-template-columns: auto auto;
+  }
+  @media (max-width: 767px) {
+    grid-template-columns: auto;
+  }
 }
 
 .link-card-list-container {
@@ -11,7 +18,15 @@
   align-items: center;
   background-color: #fff;
   width: 100%;
-  padding: 40px 0 100px;
+  padding: 40px 200px 100px;
+
+  @media (max-width: 1124px) {
+    padding: 40px 32px 100px;
+  }
+
+  @media (max-width: 767px) {
+    padding: 20px 32px 60px;
+  }
 }
 
 .content-wrapper {
