--- a/src/components/LinkCard/LinkCard.css
+++ b/src/components/LinkCard/LinkCard.css
@@ -19,6 +19,7 @@
       height: auto;
       object-fit: cover;
       flex-shrink: 0;
+      transition: transform 0.3s ease;
     }
   }
   .link-card-info {
@@ -50,10 +51,25 @@
       font-size: 1em;
       line-height: 1.25em;
     }
+    &:hover {
+      .link-card-title {
+        text-decoration: underline;
+      }
+
+      .link-card-description {
+        text-decoration: underline;
+      }
+    }
   }
 
   .link-card-date-created {
     font-size: 14px;
     color: #333;
+  }
+
+  &:hover {
+    .thumbnail {
+      transform: scale(1.1);
+    }
   }
 }
