--- a/src/components/CardList.css
+++ b/src/components/CardList.css
@@ -3,6 +3,7 @@
     flex-wrap: wrap;
     row-gap: 25px;
     column-gap: 20px;
+    margin: 40px 0 0;
 }
 
 .card-list img {
@@ -14,4 +15,37 @@
 .card-list > li {
     width: 340px;
     height: 334px;
+    box-shadow: 0px 5px 25px 0px #00000014;
+    border-radius: 15px;
+    overflow: hidden;
+}
+
+.card-list .text-box {
+    padding: 15px 20px;
+}
+
+.card-list .text-box > p {
+    height: 3rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    word-break: break-word;
+    margin: 10px 0;
+
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+
+.card-list .text-box .date {
+    font-size: 14px;
+    line-height: 1.19357142857;
+    color: #333;
+}
+
+.card-list .text-box .time {
+    font-size: 13px;
+    line-height: 1.19307692308;
+    color: #666;
 }
