--- a/src/components/CardList.css
+++ b/src/components/CardList.css
@@ -1,6 +1,6 @@
 .card-list {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     row-gap: 25px;
     column-gap: 20px;
     margin: 40px 0 0;
@@ -13,8 +13,6 @@
 }
 
 .card-list > li {
-    width: 340px;
-    height: 334px;
     box-shadow: 0px 5px 25px 0px #00000014;
     border-radius: 15px;
     overflow: hidden;
@@ -48,4 +46,19 @@
     font-size: 13px;
     line-height: 1.19307692308;
     color: #666;
+}
+
+@media (max-width: 1124px) {
+    /* 타블렛 */
+
+    .card-list {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 767px) {
+    /* 모바일 */
+    .card-list {
+        grid-template-columns: 1fr;
+    }
 }
