--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,6 +1,56 @@
 .shared-card {
-  width: calc(100% / 3);
+  width: calc((100% - 40px) / 3);
+  border-radius: 15px;
+  overflow: hidden;
+  box-shadow: 0px 5px 25px 0px #00000014;
 }
+
 .shared-card img {
   width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+
+.shared-card__text {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 15px 20px;
+}
+
+.shared-card__ago {
+  font-size: 13px;
+  font-weight: 400;
+  color: #666666;
+}
+
+.shared-card__title {
+  font-size: 16px;
+  font-weight: 400;
+  color: #000000;
+  width: 100%;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  word-break: break-word;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
+.shared-card__date {
+  font-size: 14px;
+  font-weight: 400;
+  color: #333333;
+}
+
+@media (max-width: 1124px) {
+  .shared-card {
+    width: calc((100% - 20px) / 2);
+  }
+}
+
+@media (max-width: 767px) {
+  .shared-card {
+    width: 100%;
+  }
 }
