--- a/src/components/utils/Search.css
+++ b/src/components/utils/Search.css
@@ -6,6 +6,17 @@
   border: none;
   outline: none;
   border-radius: 10px;
-  background: #f5f5f5 url("../../assets/search_icon.svg") no-repeat 15px center /
+  background: #f5f5f5 url("../../assets/search_icon.svg") no-repeat 15px 18px /
     16px;
+  font-size: 16px;
+  color: #666;
+}
+
+@media (max-width: 768px) {
+  .search-input {
+    height: 43px;
+    padding-left: 38px;
+    font-size: 14px;
+    background-position: 16px 12px;
+  }
 }
