--- a/src/components/utils/Search.css
+++ b/src/components/utils/Search.css
@@ -16,6 +16,7 @@
   .search-input {
     height: 43px;
     padding-left: 38px;
+    margin: 20px 0 32px;
     font-size: 14px;
     background-position: 16px 12px;
   }
