--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -13,7 +13,7 @@
   margin: 0 auto;
 }
 
-.header__link-login {
+.header__login-button {
   width: 128px;
 }
 
@@ -47,7 +47,7 @@
     width: 100%;
   }
 
-  .header__link-login {
+  .header__login-button {
     width: 80px;
   }
 
