--- a/src/components/utils/ProfileImage.css
+++ b/src/components/utils/ProfileImage.css
@@ -7,3 +7,15 @@
   width: 28px;
   height: 28px;
 }
+
+.profile-image.size-60 {
+  width: 60px;
+  height: 60px;
+}
+
+@media (max-width: 767px) {
+  .profile-image.size-60 {
+    width: 40px;
+    height: 40px;
+  }
+}
