--- a/part2/src/components/Footer.css
+++ b/part2/src/components/Footer.css
@@ -28,3 +28,19 @@ footer {
   display: flex;
   gap: 12px;
 }
+
+/* Mobile */
+@media screen and (max-width: 767px) {
+  .info {
+    display: grid;
+    grid-template: 1fr / 1fr 1fr;
+    padding: 32px 32px 64px;
+    gap: 60px;
+  }
+  .info .license {
+    grid-area: 2/ 1;
+  }
+  .sns {
+    justify-content: flex-end;
+  }
+}
