--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -3,6 +3,11 @@
   border-radius: 15px;
   overflow: hidden;
   box-shadow: 0px 5px 25px 0px #00000014;
+  transition: background-color 0.2s;
+}
+
+.shared-card:hover {
+  background-color: var(--background-color);
 }
 
 .shared-card img {
