Docs : 폴더 구조 수정

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -43,7 +43,7 @@ footer {
     gap: 30px;
 }
 
-.footer-menu a {
+.footer-menu p {
     color: #cfcfcf;
     font-family: Acme;
     font-size: 16px;
