--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,10 +1,12 @@
 .card-list .img-box {
     height: 200px;
+    overflow: hidden;
 }
 
 .card-list img {
     width: 100%;
     height: 100%;
+    transition: all 0.3s;
     object-fit: cover;
 }
 
@@ -12,6 +14,10 @@
     box-shadow: 0px 5px 25px 0px #00000014;
     border-radius: 15px;
     overflow: hidden;
+}
+
+.card-list > li:hover img {
+    scale: 1.3;
 }
 
 .card-list .text-box {
