--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -20,3 +20,42 @@ header {
     align-items: center;
     margin: 0 auto;
 }
+
+.wrap-user-profile {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+.user-profile {
+    width: 2.8rem;
+    height: 2.8rem;
+    flex-shrink: 0;
+    border-radius: 50%;
+}
+
+/* 본문 */
+.wrap-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.content-01 {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    gap: 4rem;
+    background-color: var(--Linkbrary-bg);
+    margin-top: 8rem;
+}
+
+.content-01 h1 {
+    color: #000;
+    text-align: center;
+    font-size: 6.4rem;
+    font-weight: 700;
+    line-height: 8rem;
+    white-space: nowrap;
+}
